# MAL-Trade

./: .gitignore  AGENTS.md  API.md  Justfile  index.html
backend/: BACKEND_RUST_ARCHITECTURE.md  Cargo.toml  package.json  poll_vision.py  ws_ww.py
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs
backend/crates/backtester/: Cargo.toml
backend/crates/backtester/src/: lib.rs
backend/crates/backtester/tests/: pnl.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: lib.rs  market.rs
backend/crates/data-ingest/: Cargo.toml
backend/crates/data-ingest/src/: main.rs
backend/crates/feature-engine/: Cargo.toml
backend/crates/feature-engine/src/: lib.rs
backend/crates/feature-engine/tests/: indicators.rs
backend/crates/live-trader/: Cargo.toml
backend/crates/live-trader/src/: lib.rs
backend/crates/llm-agent/: Cargo.toml
backend/crates/llm-agent/src/: lib.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs
backend/prisma/data/spot/BTCUSDT/klines_1m/: 2024-01.parquet
backend/prisma/data/spot/BTCUSDT/metadata/: offsets.json
backend/src/: index.ts
docs/: backend.md  backend_data_usage.md  frontend.md  frontend_usage.md  structure.md  todo.md  trd.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: store.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/create/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/interact/: page.tsx
frontend/src/app/(public)/: page.tsx
frontend/src/app/api/llm/: route.ts
frontend/src/app/api/trade/: route.ts
frontend/src/app/arena/: page.tsx
frontend/src/app/arena/full/: page.tsx
frontend/src/app/lab/: page.tsx
frontend/src/components/: ExtensionErrorSilencer.tsx
frontend/src/components/agents/: AgentCard.tsx
frontend/src/components/arena/: ActiveOrdersChart.tsx  LlmInsight.tsx  LlmTradesPanel.tsx  LogStream.tsx  OnChainControls.tsx  PromptLab.tsx
frontend/src/components/charts/: Sparkline.tsx
frontend/src/components/wallet/: WalletConnectButton.tsx
frontend/src/hooks/: usePaseoWallet.ts  usePolkadotWallet.ts  useTradingLoop.ts
frontend/src/lib/: paseoTx.ts  trade.ts
scripts/: test_gym.py  ws_probe.py
