[workspace]
members = [
  "crates/core",
  "crates/storage",
  "crates/data-ingest",
  "crates/feature-engine",
  "crates/backtester",
  "crates/llm-agent",
  "crates/api",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
axum = "0.7"
polars = { version = "0.42", features = ["lazy", "parquet", "temporal", "dtype-datetime", "dtype-date", "dtype-time", "csv"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
