[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mtrade_core = { path = "../core", package = "core" }
feature-engine = { path = "../feature-engine" }
backtester = { path = "../backtester" }
llm-agent = { path = "../llm-agent" }
storage = { path = "../storage" }
live-trader = { path = "../live-trader" }
futures.workspace = true
uuid.workspace = true
rustls.workspace = true
tower-http.workspace = true
