[package]
name = "live-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
uuid.workspace = true
mtrade_core = { path = "../core", package = "core" }
storage = { path = "../storage" }
feature-engine = { path = "../feature-engine" }
